Make library shared

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,8 @@ project(spidev-lib)
 
 include_directories(src/)
 
-add_library(spidev-lib src/spidev_lib.c)
-
-add_library(spidev-lib++ src/spidev_lib++.cc)
+add_library(spidev-lib SHARED src/spidev_lib.c)
+add_library(spidev-lib++ SHARED src/spidev_lib++.cc)
 
 
 install(TARGETS spidev_lib spidev_lib++ DESTINATION lib)
