made shared libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(spidev-lib)
 
 include_directories(src/)
 
-add_library(spidev-lib STATIC src/spidev_lib.c)
-add_library(spidev-lib++ STATIC src/spidev_lib++.cc)
+add_library(spidev-lib SHARED src/spidev_lib.c)
+add_library(spidev-lib++ SHARED src/spidev_lib++.cc)
 
 set_target_properties(spidev-lib PROPERTIES VERSION 0.0.1 SOVERSION 0.0.1)
 set_target_properties(spidev-lib++ PROPERTIES VERSION 0.0.1 SOVERSION 0.0.1)
